# oneapi-homework

./: .gitignore  CMakeLists.txt  README.md
lib/: README.md  my.hpp
lib/my/: mat.hpp  my.hpp
src/convolution/: CMakeLists.txt  image_convolution.cpp
src/matrix/: CMakeLists.txt  matrix.cpp  matrix_multiplication.cpp
src/merge/: CMakeLists.txt  merge_sorting.cpp
src/vector/: CMakeLists.txt
